# workbench

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
cmake/: BuildTypeBenchmark.cmake  BuildTypeCoverage.cmake  BuildTypeSanitizer.cmake  register_benchmark.cmake  register_fuzz.cmake  setup_benchmark.cmake  setup_fuzz.cmake
encoding/: CMakeLists.txt
encoding/src/: lib.cpp  lib.hpp
encoding/tests/: fuzz_encoding.cpp  test_encoding.cpp
tools/: do_fuzz.py
